# Kairos_Therapeutics

./: .env.example  .gitignore  CLAUDE.md  README.md  app.py  pyproject.toml  requirements.txt  setup.py
config/: default_config.yaml
docs/: architecture.md  installation.md
notebooks/: GSE75337_Fibroblast_Aging.ipynb  Notebook_01_DataIngest_GSE114007_v0_1.ipynb  Notebook_02_QC_and_EDA.ipynb  Notebook_03_Differential_Expression.ipynb  Notebook_04_Pathway_and_Aging_Enrichment.ipynb  Notebook_05_Age_Disease_Intersection.ipynb  Notebook_06_Therapeutic_Target_Prioritization_PUBLIC.ipynb
notebooks/exploratory/: 01_drug_discovery_example.ipynb  02_medical_imaging_example.ipynb
reports/: age_disease_intersection_summary.txt  diff_expr_summary.txt  pathway_enrichment_summary.txt  qc_summary.txt
scripts/: run_tests.sh  setup_environment.sh
src/kairos/clinical_analysis/: outcome_prediction.py
src/kairos/data_integration/: multimodal_fusion.py
src/kairos/drug_discovery/: molecular_properties.py  target_interaction.py
src/kairos/genomics/: sequence_analysis.py
src/kairos/medical_imaging/: image_classifier.py  segmentation.py
src/kairos/utils/: config.py  logging_utils.py
tests/unit/: test_drug_discovery.py
